--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>AfganMt2</title>
 </head>
 <body>
-    <div class="section-1">
+    <div class="header">
         <div class="logo">
             Header logo
         </div>
@@ -20,47 +20,47 @@
             </ul>   
         </div>
     </div>
-    <div class="section-2">
-        <div>
-            <div>This Website is awesome</div>
-            <div>This website have some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
-            <button>Sign Up</button>
-        </div>
-        <div class="placeholder-image">
-            this is a placeholder for an image
-        </div>
-    </div>
-    <div class="section-3">
-        <div class="info">Some random information</div>
-        <div class="images">
+    <div class="content">
+        <div class="section-1">
             <div>
-                <img src="../odin-recipes/images/boiled-chicken.png">
-                <div class="text">this is some subtext under an illustration or image</div>
+                <div class="hero-main-text">This Website is awesome</div>
+                <div class="hero-secondary-text">This website have some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                <button class="sign-top">Sign Up</button>
             </div>
-            <div>
-                <img src="../odin-recipes/images/boiled-chicken.png">
-                <div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div>
-                <img src="../odin-recipes/images/boiled-chicken.png">
-                <div class="text">this is some subtext under an illustration or image</div>
-            </div>
-            <div>
-                <img src="../odin-recipes/images/boiled-chicken.png">
-                <div class="text">this is some subtext under an illustration or image</div>
+            <img class="header-photo" src="../odin-recipes/images/maxresdefault.jpeg">
+        </div>
+        <div class="section-2">
+            <div class="info">Some random information</div>
+            <div class="images">
+                <div>
+                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+                <div>
+                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="section-4">
-        <div class="quote">This is an inspiring quto, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
-        <div class="quoter">-Thor, God of Thunder </div>
-    </div>
-    <div class="section-5">
-        <div>
-            <div>Call to action! It's time!</div>
-            <div>Sign up for our product by clicking that button right over there</div>
+        <div class="section-3">
+            <div class="quote">This is an inspiring quto, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quoter">-Thor, God of Thunder </div>
         </div>
-        <button>Sign Up</button>
+        <div class="section-4">
+            <div>
+                <div>Call to action! It's time!</div>
+                <div>Sign up for our product by clicking that button right over there</div>
+            </div>
+            <button class="sign-bottom">Sign Up</button>
+        </div>
     </div>
     <div class="footer">
         Copyright &copy; The Odin Project 2021
