Latest version without the real content inside.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         </div>
         <div>
             <ul class="header-links">
-                <a href="#">header link 1</a>
-                <a href="#">header link 2</a>
-                <a href="#">header link 3</a>
+                <a href="#">header link one</a>
+                <a href="#">header link two</a>
+                <a href="#">header link three</a>
             </ul>   
         </div>
     </div>
     <div class="content">
         <div class="section-1">
             <div>
-                <div class="hero-main-text">This Website is awesome</div>
+                <div class="hero-main-text">This website is awesome</div>
                 <div class="hero-secondary-text">This website have some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
                 <button class="sign-top">Sign Up</button>
             </div>
@@ -33,25 +33,25 @@
             <div class="info">Some random information</div>
             <div class="images">
                 <div>
-                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <img class="img" src="../odin-recipes/images/boiled-chicken.png">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div>
-                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <img class="img" src="../odin-recipes/images/boiled-chicken.png">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div>
-                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <img class="img" src="../odin-recipes/images/boiled-chicken.png">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
                 <div>
-                    <img src="../odin-recipes/images/boiled-chicken.png">
+                    <img class="img" src="../odin-recipes/images/boiled-chicken.png">
                     <div class="text">this is some subtext under an illustration or image</div>
                 </div>
             </div>
         </div>
         <div class="section-3">
-            <div class="quote">This is an inspiring quto, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="quoter">-Thor, God of Thunder </div>
         </div>
         <div class="section-4">
